; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-s3c/extr_time.c_timer_mask_usec_ticks.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-s3c/extr_time.c_timer_mask_usec_ticks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TIMER_USEC_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @timer_mask_usec_ticks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @timer_mask_usec_ticks(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = udiv i64 %6, 1000
  store i64 %7, i64* %5, align 8
  %8 = load i32, i32* @TIMER_USEC_SHIFT, align 4
  %9 = shl i32 1000, %8
  %10 = sext i32 %9 to i64
  %11 = load i64, i64* %3, align 8
  %12 = mul i64 %10, %11
  %13 = load i64, i64* %5, align 8
  %14 = lshr i64 %13, 1
  %15 = add i64 %12, %14
  %16 = load i64, i64* %5, align 8
  %17 = udiv i64 %15, %16
  ret i64 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
